// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PlayCard /> renders correctly flipped card 1`] = `
<styled.div
  fixed={true}
  onClick={[MockFunction]}
>
  <ConnectFunction
    level="casual"
  />
  <ConnectFunction
    level="medium"
  />
  <ConnectFunction
    level="hard"
  />
</styled.div>
`;

exports[`<PlayCard /> renders correctly unflipped card 1`] = `
<styled.div
  fixed={false}
  onClick={[MockFunction]}
>
  <p>
    P
  </p>
</styled.div>
`;
